@@ -157,6 +157,17 @@ int main(int argc, char **argv)
 					return 1;
 				}
 				break;
+			case PBK_Photo       :
+				if ((pbk.Entries[i].Picture.Length !=
+					backup.PhonePhonebook[0]->Entries[i].Picture.Length) ||
+					!memcmp(
+					pbk.Entries[i].Picture.Buffer,
+					backup.PhonePhonebook[0]->Entries[i].Picture.Buffer,
+					pbk.Entries[i].Picture.Length)) {
+					printf("Field %d is not the same!\n", i);
+					return 1;
+				}
+				break;
 			case PBK_Date:
 			case PBK_Category:
 			case PBK_Private:
